@@ -1,4 +1,40 @@
-/* $NetBSD: wsmouse.c,v 1.38 2005/12/11 12:24:12 christos Exp $ */
+/* $NetBSD: wsmouse.c,v 1.39 2006/02/05 17:38:33 jmmv Exp $ */
+
+/*-
+ * Copyright (c) 2006 The NetBSD Foundation, Inc.
+ * All rights reserved.
+ *
+ * This code is derived from software contributed to The NetBSD Foundation
+ * by Julio M. Merino Vidal.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ * 3. All advertising materials mentioning features or use of this software
+ *    must display the following acknowledgement:
+ *	This product includes software developed by the NetBSD
+ *	Foundation, Inc. and its contributors.
+ * 4. Neither the name of The NetBSD Foundation nor the names of its
+ *    contributors may be used to endorse or promote products derived
+ *    from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
+ * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+ * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR CONTRIBUTORS
+ * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ */
 
 /*
  * Copyright (c) 1996, 1997 Christopher G. Demetriou.  All rights reserved.
@@ -75,7 +111,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: wsmouse.c,v 1.38 2005/12/11 12:24:12 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: wsmouse.c,v 1.39 2006/02/05 17:38:33 jmmv Exp $");
 
 #include "wsmouse.h"
 #include "wsdisplay.h"
@@ -94,6 +130,8 @@ __KERNEL_RCSID(0, "$NetBSD: wsmouse.c,v 1.38 2005/12/11 12:24:12 christos Exp $"
 #include <sys/signalvar.h>
 #include <sys/device.h>
 #include <sys/vnode.h>
+#include <sys/callout.h>
+#include <sys/malloc.h>
 
 #include <dev/wscons/wsconsio.h>
 #include <dev/wscons/wsmousevar.h>
@@ -132,6 +170,11 @@ struct wsmouse_softc {
 
 	int		sc_refcnt;
 	u_char		sc_dying;	/* device is being detached */
+
+	struct wsmouse_repeat	sc_repeat;
+	int			sc_repeat_button;
+	struct callout		sc_repeat_callout;
+	unsigned int		sc_repeat_delay;
 };
 
 static int  wsmouse_match(struct device *, struct cfdata *, void *);
@@ -153,6 +196,8 @@ static int  wsmousedoopen(struct wsmouse_softc *, struct wseventvar *);
 
 CFATTACH_DECL(wsmouse, sizeof (struct wsmouse_softc),
     wsmouse_match, wsmouse_attach, wsmouse_detach, wsmouse_activate);
+
+static void wsmouse_repeat(void *v);
 
 extern struct cfdriver wsmouse_cd;
 
@@ -204,6 +249,12 @@ wsmouse_attach(struct device *parent, struct device *self, void *aux)
 
 	sc->sc_accessops = ap->accessops;
 	sc->sc_accesscookie = ap->accesscookie;
+
+	/* Initialize button repeating. */
+	memset(&sc->sc_repeat, 0, sizeof(sc->sc_repeat));
+	sc->sc_repeat_button = -1;
+	sc->sc_repeat_delay = 0;
+	callout_init(&sc->sc_repeat_callout);
 
 #if NWSMUX > 0
 	sc->sc_base.me_ops = &wsmouse_srcops;
@@ -437,21 +488,47 @@ wsmouse_input_xyzw(struct device *wsmousedev, u_int btns /* 0 is up */,
 
 	mb = sc->sc_mb;
 	while ((d = mb ^ ub) != 0) {
+		int btnno;
+
+		/*
+		 * Cancel button repeating if button status changed.
+		 */
+		if (sc->sc_repeat_button != -1) {
+			KASSERT(sc->sc_repeat_button >= 0);
+			KASSERT(sc->sc_repeat.wr_buttons &
+                            (1 << sc->sc_repeat_button));
+			ub &= ~(1 << sc->sc_repeat_button);
+			sc->sc_repeat_button = -1;
+			callout_stop(&sc->sc_repeat_callout);
+		}
+
 		/*
 		 * Mouse button change.  Find the first change and drop
 		 * it into the event queue.
 		 */
 		NEXT;
-		ev->value = ffs(d) - 1;
+		btnno = ffs(d) - 1;
+		KASSERT(btnno >= 0);
 
-		KASSERT(ev->value >= 0);
-
+		ev->value = btnno;
 		d = 1 << ev->value;
 		ev->type =
 		    (mb & d) ? WSCONS_EVENT_MOUSE_DOWN : WSCONS_EVENT_MOUSE_UP;
 		TIMESTAMP;
 		ADVANCE;
 		ub ^= d;
+
+		/*
+		 * Program button repeating if configured for this button.
+		 */
+		if ((mb & d) && (sc->sc_repeat.wr_buttons & (1 << btnno)) &&
+		    sc->sc_repeat.wr_delay_first > 0) {
+			sc->sc_repeat_button = btnno;
+			sc->sc_repeat_delay = sc->sc_repeat.wr_delay_first;
+			callout_reset(&sc->sc_repeat_callout,
+			    (hz * sc->sc_repeat_delay) / 1000, wsmouse_repeat,
+			    sc);
+		}
 	}
 out:
 	if (any) {
@@ -463,6 +540,78 @@ out:
 			    sc->sc_base.me_dv.dv_xname, evar));
 #endif
 	}
+}
+
+static void
+wsmouse_repeat(void *v)
+{
+	int oldspl;
+	unsigned int newdelay;
+	struct wsmouse_softc *sc;
+	struct wseventvar *evar;
+
+	oldspl = spltty();
+	sc = (struct wsmouse_softc *)v;
+
+	if (sc->sc_repeat_button == -1) {
+		/* Race condition: a "button up" event came in when
+		 * this function was already called but did not do
+		 * spltty() yet. */
+		splx(oldspl);
+		return;
+	}
+	KASSERT(sc->sc_repeat_button >= 0);
+
+	KASSERT(sc->sc_repeat.wr_buttons & (1 << sc->sc_repeat_button));
+
+	newdelay = sc->sc_repeat_delay;
+
+	evar = sc->sc_base.me_evp;
+	if ((evar->put + 1) % WSEVENT_QSIZE != evar->get &&
+	    (evar->put + 2) % WSEVENT_QSIZE != evar->get) {
+		/* Queue has room for at least two more events. */
+		int oldspl2;
+		struct wscons_event *ev;
+
+		/* Construct and inject new button up event. */
+		ev = &evar->q[evar->put];
+		ev->value = sc->sc_repeat_button;
+		ev->type = WSCONS_EVENT_MOUSE_UP;
+		oldspl2 = splhigh();
+		TIMEVAL_TO_TIMESPEC(&time, &ev->time);
+		splx(oldspl2);
+		evar->put = (evar->put + 1) % WSEVENT_QSIZE;
+
+		/* Construct and inject new button down event. */
+		ev = &evar->q[evar->put];
+		ev->value = sc->sc_repeat_button;
+		ev->type = WSCONS_EVENT_MOUSE_DOWN;
+		oldspl2 = splhigh();
+		TIMEVAL_TO_TIMESPEC(&time, &ev->time);
+		splx(oldspl2);
+		evar->put = (evar->put + 1) % WSEVENT_QSIZE;
+
+		sc->sc_ub = 1 << sc->sc_repeat_button;
+
+		WSEVENT_WAKEUP(evar);
+
+		if (newdelay - sc->sc_repeat.wr_delay_decrement <
+		    sc->sc_repeat.wr_delay_minimum)
+			newdelay = sc->sc_repeat.wr_delay_minimum;
+		else if (newdelay > sc->sc_repeat.wr_delay_minimum)
+			newdelay -= sc->sc_repeat.wr_delay_decrement;
+		KASSERT(newdelay >= sc->sc_repeat.wr_delay_minimum &&
+		    newdelay <= sc->sc_repeat.wr_delay_first);
+	}
+
+	/*
+	 * Reprogram the repeating event.
+	 */
+	sc->sc_repeat_delay = newdelay;
+	callout_reset(&sc->sc_repeat_callout, (hz * newdelay) / 1000,
+	    wsmouse_repeat, sc);
+
+	splx(oldspl);
 }
 
 int
@@ -532,6 +681,13 @@ wsmousedoopen(struct wsmouse_softc *sc, struct wseventvar *evp)
 	sc->sc_y = INVALID_Y;
 	sc->sc_z = INVALID_Z;
 
+	/* Stop button repeating when messing with the device. */
+	if (sc->sc_repeat_button != -1) {
+		KASSERT(sc->sc_repeat_button >= 0);
+		sc->sc_repeat_button = -1;
+		callout_stop(&sc->sc_repeat_callout);
+	}
+
 	/* enable the device, and punt if that's not possible */
 	return (*sc->sc_accessops->enable)(sc->sc_accesscookie);
 }
@@ -588,6 +744,7 @@ wsmouse_do_ioctl(struct wsmouse_softc *sc, u_long cmd, caddr_t data,
 		 int flag, struct lwp *l)
 {
 	int error;
+	struct wsmouse_repeat *wr;
 
 	if (sc->sc_dying)
 		return (EIO);
@@ -619,6 +776,36 @@ wsmouse_do_ioctl(struct wsmouse_softc *sc, u_long cmd, caddr_t data,
 		if (*(int *)data != sc->sc_base.me_evp->io->p_pgid)
 			return (EPERM);
 		return (0);
+	}
+
+	/*
+	 * Try the wsmouse specific ioctls.
+	 */
+	switch (cmd) {
+	case WSMOUSEIO_GETREPEAT:
+		wr = (struct wsmouse_repeat *)data;
+		memcpy(wr, &sc->sc_repeat, sizeof(sc->sc_repeat));
+		return 0;
+
+	case WSMOUSEIO_SETREPEAT:
+		if ((flag & FWRITE) == 0)
+			return EACCES;
+
+		/* Validate input data. */
+		wr = (struct wsmouse_repeat *)data;
+		if (wr->wr_delay_first != 0 &&
+		    (wr->wr_delay_first < wr->wr_delay_decrement ||
+		     wr->wr_delay_first < wr->wr_delay_minimum ||
+		     wr->wr_delay_first < wr->wr_delay_minimum +
+		     wr->wr_delay_decrement))
+			return EINVAL;
+
+		/* Stop current repeating and set new data. */
+		sc->sc_repeat_button = -1;
+		callout_stop(&sc->sc_repeat_callout);
+		memcpy(&sc->sc_repeat, wr, sizeof(sc->sc_repeat));
+
+		return 0;
 	}
 
 	/*
